@@ -8,6 +8,9 @@ Changes - Apache::Test change logfile
 
 =item 1.08_dev
 
+Hard-code listen directive to 127.0.0.1, solving problems for people
+with IPv4 & IPv6 address until a better solution is found [Gozer]
+
 prefix Apache::TestTrace (non-colour mode) messages with the loglevel,
 similar to what Apache does. [Stas]
 
